<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:gravity="center_horizontal"
    android:layoutMode="clipBounds"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/logo"
        android:layout_width="74dp"
        android:layout_height="160dp"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/description_label" />

    <Button
        android:id="@+id/start"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:width="300dp"
        android:text="@string/start" />

    <Button
        android:id="@+id/back"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="300dp"
        android:text="@string/back" />

</LinearLayout>
